# axum-nextjs-app

./: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  flake.nix  next.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts
backend/: Cargo.toml
backend/configuration/: base.yaml  production.yaml
backend/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
backend/src/routes/: mod.rs
backend/tests/api/: healthcheck.rs  helper.rs  main.rs
components/: arrow-svg.tsx  contact-svg.tsx  contactSvg.tsx  copyToClipboard.tsx  emptySection.tsx  footer.tsx  header.tsx  layout.tsx  meta.tsx  section-spy.tsx  section.tsx  svganim.tsx
pages/: _app.tsx  contact.tsx  index.tsx  works.tsx
styles/: globals.css
