[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
axum =  "0.6.20"
config = "0.13.3"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
serde-aux = "4.2.0"
hyper =  {version = "0.14.27", features = ["server"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tower = { version = "0.4.13"}
tower-http = {version = "0.4.4", features = ["trace", "fs"]}

[dev-dependencies]
once_cell = "1.18.0"
reqwest = {version = "0.11.20", features = ["json", "rustls-tls", "cookies"]}

